<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kallafishapps.masslotto.activities.MainMenuActivity" >

    <TextView
        android:id="@+id/main_menu_app_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/color_old_money"
        android:textSize="@dimen/game_standard_label_text_size"
        android:textStyle="bold"
        android:typeface="serif" />

    <Button
        android:id="@+id/main_menu_play_button"
        android:layout_width="@dimen/game_generate_numbers_button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/standard_button_layout_margin"
        android:layout_below="@id/main_menu_app_name_label"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="onClick"
        android:text="@string/menu_item_generate_numbers"
        android:typeface="serif"
        android:width="@dimen/standard_button_width" />

    <Button
        android:id="@+id/main_menu_check_numbers_button"
        android:layout_width="@dimen/game_generate_numbers_button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/standard_button_layout_margin"
        android:layout_below="@id/main_menu_play_button"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="onClick"
        android:text="@string/button_check_numbers_text"
        android:typeface="serif"
        android:width="@dimen/standard_button_width" />

    <Button
        android:id="@+id/main_menu_settings_button"
        android:layout_width="@dimen/game_generate_numbers_button_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/standard_button_layout_margin"
        android:layout_below="@id/main_menu_check_numbers_button"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="onClick"
        android:text="@string/button_set_settings_text"
        android:typeface="serif"
        android:width="@dimen/standard_button_width" />

</RelativeLayout>