<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/check_numbers_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kallafishapps.masslotto.activities.CheckNumbersActivity" >

    <TextView
        android:id="@+id/game_spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/string_select_game"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="serif" />

    <Spinner
        android:id="@+id/spinner_games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/game_spinner_label"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/standard_spinner_margin_top"
        android:layout_marginTop="@dimen/standard_spinner_margin_top" />

    <TextView
        android:id="@+id/check_numbers_url_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinner_games"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/string_check_numbers_url_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="serif" >
    </TextView>

    <TextView
        android:id="@+id/check_numbers_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_numbers_url_label"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/string_check_numbers_url"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:typeface="serif" >
    </TextView>

</RelativeLayout>