<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kallafishapps.masslotto.activities.SettingsActivity" >

    <TextView
        android:id="@+id/settings_color_spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/choose_color_background"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="serif" />

    <Spinner
        android:id="@+id/settings_color_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/standard_spinner_margin_top"
        android:layout_marginTop="@dimen/standard_spinner_margin_top" />

    <TextView
        android:id="@+id/settings_games_spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/string_default_game"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="serif" />

    <Spinner
        android:id="@+id/spinner_games"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/standard_spinner_margin_top"
        android:layout_marginTop="@dimen/standard_spinner_margin_top" />

    <TextView
        android:id="@+id/settings_bottom_spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/string_remove_bottom"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="serif" />

    <Spinner
        android:id="@+id/settings_bottom_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/standard_spinner_margin_top" />

    <TextView
        android:id="@+id/settings_display_bottom_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/standard_spinner_margin_bottom"
        android:textSize="@dimen/bottom_top_number_text_size"
        android:typeface="serif" />

    <TextView
        android:id="@+id/settings_top_spinner_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/string_show_only_top"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:typeface="serif" />

    <Spinner
        android:id="@+id/settings_top_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/standard_spinner_margin_top" />

    <TextView
        android:id="@+id/settings_display_top_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/standard_spinner_margin_bottom"
        android:textSize="@dimen/bottom_top_number_text_size"
        android:typeface="serif" />

</LinearLayout>